# Project02_sim2sim

./: .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  assets
config/g1/: sim2sim.yaml
include/sim2sim/: action_codec.h  mujoco_state_subscriber.h  observation_builder.h  rl_onnx_policy.h  sim2sim_controller_node.h  sim2sim_types.h
launch/: mujoco.launch.py
src/: action_codec.cpp  main.cpp  mujoco_state_subscriber.cpp  observation_builder.cpp  rl_onnx_policy.cpp  sim2sim_controller_node.cpp
src/sim2sim_action/: CMakeLists.txt  package.xml
src/sim2sim_action/src/: action_process_node.cpp
src/sim2sim_bringup/: CMakeLists.txt  package.xml
src/sim2sim_bringup/config/: action_processor.yaml  obs_processor.yaml  platform_mujoco.yaml  policy_stub.yaml
src/sim2sim_bringup/launch/: sim2sim_mujoco_full.launch.py
src/sim2sim_obs/: package.xml  setup.cfg  setup.py
src/sim2sim_obs/resource/: sim2sim_obs
src/sim2sim_obs/sim2sim_obs/: obs_process_node.py
src/sim2sim_platform/: CMakeLists.txt  package.xml
src/sim2sim_platform/include/sim2sim_platform/: mujoco_node.hpp
src/sim2sim_platform/src/: main.cpp  mujoco_node.cpp
src/sim2sim_policy/: package.xml  setup.cfg  setup.py
src/sim2sim_policy/sim2sim_policy/: rl_policy_node.py
